2011-08-21 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/gtk-sat-module.c
    Adds Event list to modules support in satellite reload and corrects some error messages.

2011-08-21 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/tle-update.c
    Eliminates memory leak and cut and paste error and removes whitespace around tle before importing.

    * ChangeLog
    * src/gtk-sat-tree.c
    Eliminates use of deprecated tooltips code.

    * ChangeLog
    * TODO
    Updates TODO.

2011-08-20 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/tle-update.c
    Updates satellite name and nickname if of form YYYY-NNNAAA indicating first TLE downloaded before celestrak used given name and improves error reporting.


2011-08-09 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/tle-update.c
    Use newest tle available in file tle update.

    * ChangeLog
    * NEWS
    * src/gtk-rot-ctrl.c
    Fixes bug 3271573: Track button in rotator controller has no effect.

    * ChangeLog
    * src/Makefile.am
    Eliminates DATADIR from defines to avoid mingw32 problem with winsock.

    * ChangeLog
    * src/gtk-sat-map.c
    Refactors code that stores per satellite show track and highlight coverage.


2011-08-04 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/gtk-sat-map.c
    * src/gtk-sat-map.h
    * src/gtk-sat-map-popup.c
    * src/config-keys.h
    Remember ground tracks and highlight coverages in map view.
    Feature Request: 3179738

2011-07-31 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-rot-knob.c
    * src/gtk-rot-knob.h
    * src/gtk-sky-glance.c
    * src/gtk-sky-glance.h
    * src/gtk-rig-ctrl.h
    * src/gtk-sat-list.h
    * src/gtk-sat-module.h
    * src/gtk-sat-list-col-sel.h
    * src/gtk-sat-selector.h
    * src/gtk-single-sat.h
    * src/gtk-polar-plot.c
    * src/gtk-polar-plot.h
    * src/gtk-event-list.h
    * src/gtk-sat-map.c
    * src/gtk-sat-map.h